    - TownToggleTaxPercentEvent
    - TownToggleUnknownEvent
    - These events fire after all other Towny-side decisions are made on whether the action is allowed by the sender.
    - Adds bonus TownToggleUnknownEvent & NationToggleUnknownEvent which is fired when a subcommand we dont recognize is used.
      - Defaults to cancelled but is fired to allow another plugin to be able to see the args used in order to simulate their having a proper /t toggle command.
    - Switches help menus over to using the newer HelpMenu object.
  - Cleanup Town Ruin code - Javadoc and other changes, courtesy of TheFlagCourier with PR #4518.
  - Test that the name is allowed before charging money to change a nation or town name.
    - Closes #4530.
  - API: Added TownLeaveEvent
    - A cancellable event fired directly before a player would accept/deny leaving their town.
    - Closes #4513.
  - Fix ruin hours not being shown properly in the town status screen.
    - Closes #4534.
  - Move neutral setting to Government, allowing Towns to become neutral.
    - New permission node: towny.command.town.toggle.neutral.
    - No command to manipulate this setting as of yet.
  - API: Added NewHourEvent
  - New Command: /t toggle neutral|peaceful
    - Toggles a town's neutral status.
    - Otherwise unused for now.
  - API: Added TownToggleNeutralEvent.
  - Fix Sender cannot be null! message seen when outlaw add/remove is done on an offline player.
  - Fix NewHourEvent async.
  - Fix /n kick tab complete populated with non-nation towns.
    - Closes #4542.
  - Fix improper message being shown when trying to kick a mayor of another town from your town.
    - Closes #4541.
  - Fix/Improve Town Toggle Events, courtesy of silverwolfg11 with PR #4543.
  - Fix tag commands not giving correct feedback.
  - Fix /n set tag missing a tabcompleter.
    - Closes #4540.
  - Fix nations and towns being able to send an invite to towns and residents which are already members.
    - Closes #4539.